--- a/index.html
+++ b/index.html
@@ -66,7 +66,13 @@
             const flavor = document.getElementById("nameInput").value.trim().toLowerCase();
             const output = document.getElementById("output");
 
-            if (flavor === "berry" || flavor === "berry muesli") {
+            if (
+                flavor === "berry" ||
+                flavor === "berry muesli" ||
+                flavor === "mixed berry" ||
+                flavor === "mixed berry muesli" ||
+                flavor === "mixed berries"
+            ) {
                 output.innerHTML = `🌸 <strong>Good Morning, Siwaphiwe!</strong> 🌸<br><br>
                 May God fill your day  with peace, warmth, and beautiful moments.<br>
                 May everything you touch turn out well, and may positivity follow you
