--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 Apparently, those things are always loaded with free money imagine haha, well let's try it today.  
                 Pick any one of them. A little birdie told me there's a R100.00 note with your name on it just for your snacks.<br><br>
                 If it costs you more, 
-                kindly send the bill to this gentleman because clearly, he sucks at Girl Math, let him handle it !<br><br>
+                kindly send the bill back to the gentleman who sent this because clearly, he sucks at Girl Math, let him handle it !<br><br>
                 061 531 3938<br>
                 Pin: 96747`;
             } else if (flavor.length > 0) {
