--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <div class="card">
         <h2>Hi there, unlock your secret letter by telling us, what is your favourite muesli flavour?</h2>
-        <input type="text" id="nameInput" placeholder="Only works if you type it with a smile on your face :)" />
+        <input type="text" id="nameInput" placeholder="Only works if you type with a smile on your face :)" />
         <button onclick="sendMessage()">Show Message</button>
         <div class="message" id="output"></div>
     </div>
