--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             ) {
                 output.innerHTML = `🌸 <strong>Good Morning, Siwaphiwe!</strong> 🌸<br><br>
                 
-                On this Tuesday, may God fill your day with peace, warmth, and beautiful moments.<br>
+                On this Wednesday, may God fill your day with peace, warmth, and beautiful moments.<br>
                 May your path be light, your heart be steady, and every moment unfold with grace.
                 May everything you touch turn out well, and may positivity follow you.
                 Whatever you face today, may you find the strength to rise above it 
@@ -86,11 +86,11 @@
                 
                 I heard FNB has those funny-looking big boxes called ATM's. 
                 Apparently, those things are always loaded with free money imagine haha, well let's try it today.  
-                Pick any one of them. A little birdie told me there's a R100.00 note with your name on it just for your snacks.<br><br>
+                Pick any one of them. A little birdie told me there's some notes with your name on it just for your snacks.<br><br>
                 If it costs you more, 
-                kindly send the bill back to the gentleman who sent this because clearly, he sucks at Girl Math, let him handle it !<br><br>
-                061 531 3938<br>
-                Pin: 96747`;
+                kindly send the bill back to the gentleman who sent this because clearly, he sucks at Girl Math, let him handle it!<br><br>
+                071 136 6979<br>
+                Pin: 56067`;
             } else if (flavor.length > 0) {
                 output.innerHTML = `Hmm... that flavour doesn't unlock the secret letter.`;
             } else {
