--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To unlock your secret letter, what is your favourite muesli flavour?</title>
+
+    <!-- Beautiful Serif Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Playfair Display', serif;
             background: #f7f7ff;
             display: flex;
             flex-direction: column;
@@ -31,6 +35,7 @@
             border: 1px solid #bbb;
             margin-top: 10px;
             font-size: 16px;
+            font-family: inherit;
         }
         button {
             width: 100%;
@@ -42,6 +47,7 @@
             color: white;
             font-size: 16px;
             cursor: pointer;
+            font-family: inherit;
         }
         button:hover {
             background: #5851db;
@@ -49,7 +55,7 @@
         .message {
             margin-top: 20px;
             font-size: 17px;
-            line-height: 1.5;
+            line-height: 1.6;
         }
     </style>
 </head>
@@ -98,6 +104,7 @@
             }
         }
     </script>
+
     <p style="text-align:center; font-size:14px; color:#777;">Thoughtfully Coded by Thaps 💖</p>
 </body>
 </html>
