--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@ You deserve a day as lovely, soft, and beautiful as you are.<br><br>
 
 Wishing you smiles, courage, and small victories throughout the day.<br><br>
 
-Oh, and apparently FNB has those funny-looking big boxes called ATMs, the ones that are always "mysteriously" filled with free money.<br>
-So… let's test that theory today. 
-Pick any one of them.<br>
+Oh, and apparently FNB has those funny-looking big boxes called ATMs - the ones that are always "mysteriously" filled with free money.<br>
+So… let's test that theory today. Pick any one of them.<br>
 A little birdie whispered that there are a few notes inside with your name on them, just for your snacks.<br><br>
 
 And if your snacks betray you and cost more…<br>
-please forward the bill to the gentleman who sent this, clearly he's terrible at Girl Math, so let him fix it.<br><br>
+please forward the bill to the gentleman who sent this — clearly he's terrible at Girl Math, so let him fix it.<br><br>
 
 071 136 6979<br>
 Pin: 56067
@@ -108,5 +107,5 @@ Pin: 56067
 
     <p style="text-align:center; font-size:14px; color:#777;">Thoughtfully Coded by Thaps 💖</p>
 </body>
-</html>
+</html>  
 
