--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         .message {
             margin-top: 20px;
             font-size: 17px;
-            line-height: 1.0;
+            line-height: 1.2;
         }
     </style>
 </head>
@@ -75,7 +75,7 @@
                 flavor === "mixed berry muesli" ||
                 flavor === "mixed berries"
             ) {
-                output.innerHTML = `🌸 <strong>Good Morning,Siwaphiwe</strong> 🌸<br><br>
+                output.innerHTML = `🌸 <strong>Good Morning Siwaphiwe</strong> 🌸<br><br>
 On this Wednesday morning, may God surround your day with peace, warmth, and gentle blessings.<br>
 May your path be light, may your heart stay steady, and may every moment unfold with a touch of grace.<br>
 I pray that whatever you do today works in your favour, and that positivity follows you everywhere you go.<br><br>
@@ -83,12 +83,12 @@ Whatever challenges come your way, may you rise above them with strength, calmne
 You deserve a day as lovely, soft, and beautiful as you are.<br><br>
 Wishing you smiles, courage, and small victories throughout the day.<br><br>
 To keep that smile longer, I heard FNB has those funny-looking big boxes called ATM's, apparently, those things are always loaded with free money for special people, imagine that haha!<br>
-Well... let's try it today since you are a special person!<br>
-Pick any one of them.<br>
+Well... let's try it today since you are a special person!<br><br>
+Pick any one of them.<br><br>
 A little birdie whispered that there are a few notes inside with your name on them for snacks since you love them so much.<br><br>
 Let me know how it goes!<br><br>
 And if your snacks betray you and cost more…<br>
-please forward the bill to the gentleman who sent you this letter, clearly he's terrible at Girl Math, so let him fix it.<br><br>
+please forward the bill to the gentleman who sent you this letter, clearly he's terrible at Girl Math, so let him handle that for you.<br><br>
 Have a beautiful day Siwaphiwe ! <br><br>
 071 136 6979<br>
 Pin: 56067
