--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@ I pray that whatever you do today works in your favour, and that positivity foll
 Whatever challenges come your way, may you rise above them with strength, calmness, and confidence.<br>
 You deserve a day as lovely, soft, and beautiful as you are.<br><br>
 Wishing you smiles, courage, and small victories throughout the day.<br><br>
-To keep that smile longer, I heard FNB has those funny-looking big boxes called ATM's, apparently, those things are always loaded with free money for special people, imagine that haha!<br>
+To keep that smile longer, I heard FNB has those funny-looking big boxes called ATM's.<br> Apparently, those things are always loaded with free money for special people, imagine that haha!<br>
 Well... let's try it today since you are a special person!<br><br>
 Pick any one of them.<br><br>
-A little birdie whispered that there are a few notes inside with your name on them for snacks since you love them so much.<br><br>
+A little birdie whispered to me that there are some notes inside with your name on them for some snacks since you love them so much.<br><br>
 Let me know how it goes!<br><br>
-And if your snacks betray you and cost more…<br>
-please forward the bill to the gentleman who sent you this letter, clearly he's terrible at Girl Math, so let him handle that for you.<br><br>
-Have a beautiful day Siwaphiwe ! <br><br>
+And if your snacks betray you and cost more… don't hold back<br>
+Forward the bill to the gentleman who sent you this letter, clearly he's terrible at Girl Math, so let him handle that for you.<br><br>
+Have yourself a beautiful day, Siwaphiwe ! <br><br>
 071 136 6979<br>
 Pin: 56067
                 `;
