--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Well... let's try it today since you are a special person!<br><br>
 Pick any one of them.<br><br>
 A little birdie whispered to me that there are some notes inside with your name on them for some snacks since you love them so much.<br><br>
 Let me know how it goes!<br><br>
-And if your snacks betray you and cost more… don't hold back<br>
+And if your snacks betray you and cost more… don't hold back.<br>
 Forward the bill to the gentleman who sent you this letter, clearly he's terrible at Girl Math, so let him handle that for you.<br><br>
 Have yourself a beautiful day, Siwaphiwe ! <br><br>
 071 136 6979<br>
