--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 flavor === "mixed berries"
             ) {
                 output.innerHTML = `🌸 <strong>Good Morning Siwaphiwe</strong> 🌸<br><br>
-On this Wednesday morning, may God surround your day with peace, warmth, and gentle blessings.<br>
+On this beautiful Wednesday morning, I pray that God surrounds your day with peace, warmth, and gentle blessings.<br>
 May your path be light, may your heart stay steady, and may every moment unfold with a touch of grace.<br>
 I pray that whatever you do today works in your favour, and that positivity follows you everywhere you go.<br><br>
 Whatever challenges come your way, may you rise above them with strength, calmness, and confidence.<br>
